--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>2.0.4</version>
   </parent>
   <artifactId>ddd</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>ddd</name>
   <description>Document Details Determinator library</description>
@@ -145,6 +145,8 @@
               com.helger.ddd.model.*
             </Export-Package>
             <Import-Package>!javax.annotation.*,*</Import-Package>
+            <!-- The latter one has precedence -->
+            <Include-Resource>{maven-resources},ddd-version.properties=target/classes/ddd-version.properties</Include-Resource>
           </instructions>
         </configuration>
       </plugin>
