--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
       <dependency>
         <groupId>com.helger.peppol</groupId>
         <artifactId>peppol-commons-parent-pom</artifactId>
-        <version>9.0.8</version>
+        <version>9.1.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -141,8 +141,8 @@
           <instructions>
             <Automatic-Module-Name>com.helger.ddd</Automatic-Module-Name>
             <Export-Package>
-              com.helger.ddd.*,
-              com.helger.ddd.model.*
+              com.helger.ddd,
+              com.helger.ddd.model
             </Export-Package>
             <Import-Package>!javax.annotation.*,*</Import-Package>
             <!-- The latter one has precedence -->
