--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>2.0.5</version>
   </parent>
   <artifactId>ddd</artifactId>
-  <version>0.1.3</version>
+  <version>0.1.4-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>ddd</name>
   <description>Document Details Determinator library</description>
@@ -44,7 +44,7 @@
     <connection>scm:git:git@github.com:phax/ddd.git</connection>
     <developerConnection>scm:git:git@github.com:phax/ddd.git</developerConnection>
     <url>http://github.com/phax/ddd</url>
-    <tag>ddd-0.1.3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <organization>
