--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>2.0.6</version>
   </parent>
   <artifactId>ddd</artifactId>
-  <version>0.4.0</version>
+  <version>0.4.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>ddd</name>
   <description>Document Details Determinator library</description>
