--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <connection>scm:git:https://github.com/phax/ddd.git</connection>
     <developerConnection>scm:git:https://github.com/phax/ddd.git</developerConnection>
     <url>https://github.com/phax/ddd</url>
-    <tag>ddd-0.4.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <organization>
