--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,8 @@
     <jaxb-plugin.group>org.jvnet.jaxb</jaxb-plugin.group>
     <jaxb-plugin.artifact>jaxb-maven-plugin</jaxb-plugin.artifact>
     <jaxb-plugin.version>4.0.11</jaxb-plugin.version>
-    <ph-jaxb-plugin.version>5.0.1</ph-jaxb-plugin.version>
-    <phive-rules.version>4.0.3</phive-rules.version>
+    <ph-jaxb-plugin.version>5.1.1</ph-jaxb-plugin.version>
+    <phive-rules.version>4.1.0</phive-rules.version>
   </properties>
 
   <dependencyManagement>
@@ -74,14 +74,14 @@
       <dependency>
         <groupId>com.helger.commons</groupId>
         <artifactId>ph-commons-parent-pom</artifactId>
-        <version>12.0.4</version>
+        <version>12.1.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>com.helger.peppol</groupId>
         <artifactId>peppol-commons-parent-pom</artifactId>
-        <version>12.0.5</version>
+        <version>12.2.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -245,6 +245,7 @@
             <arg>-quiet</arg>
             <arg>-Xph-default-locale</arg>
             <arg>en_US</arg>
+            <arg>-Xph-package-null-marked</arg>
             <arg>-Xph-annotate</arg>
             <arg>-Xph-fields-private</arg>
             <arg>-Xph-code-quality</arg>
@@ -277,7 +278,7 @@
               com.helger.ddd.model.jaxb.syntax1,
               com.helger.ddd.model.jaxb.vp1
             </Export-Package>
-            <Import-Package>!jakarta.annotation.*,*</Import-Package>
+            <Import-Package>!org.jspecify.annotations.*,*</Import-Package>
             <!-- The latter one has precedence -->
             <Include-Resource>{maven-resources},ddd-version.properties=target/classes/ddd-version.properties</Include-Resource>
           </instructions>
