--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <jaxb-plugin.artifact>jaxb-maven-plugin</jaxb-plugin.artifact>
     <jaxb-plugin.version>4.0.11</jaxb-plugin.version>
     <ph-jaxb-plugin.version>5.1.1</ph-jaxb-plugin.version>
-    <phive-rules.version>4.1.0</phive-rules.version>
+    <phive-rules.version>4.1.1</phive-rules.version>
   </properties>
 
   <dependencyManagement>
@@ -139,6 +139,12 @@
     <dependency>
       <groupId>com.helger.phive.rules</groupId>
       <artifactId>phive-rules-ehf</artifactId>
+      <version>${phive-rules.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.helger.phive.rules</groupId>
+      <artifactId>phive-rules-eracun</artifactId>
       <version>${phive-rules.version}</version>
       <scope>test</scope>
     </dependency>
