--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <jaxb-plugin.artifact>jaxb-maven-plugin</jaxb-plugin.artifact>
     <jaxb-plugin.version>4.0.12</jaxb-plugin.version>
     <ph-jaxb-plugin.version>5.1.1</ph-jaxb-plugin.version>
-    <phive-rules.version>4.1.2-SNAPSHOT</phive-rules.version>
+    <phive-rules.version>4.1.2</phive-rules.version>
   </properties>
 
   <dependencyManagement>
